really really fixed, portfolio item was overflowing

--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,9 @@ body {
   display:block;
   position:fixed;
   background-color: #2a3a3f;
-  width:100vw;
-  height:100vh;
-  overflow-y:auto;
+  width:100%;
+  height:100%;
+  overflow-y:visible;
   z-index:10;
 }
 .form-container {
@@ -55,18 +55,16 @@ body {
   padding:4px;
   font-size:1.2em;
 }
-.spam-filter {
-  display:none;
-}
 .submit-container {
   text-align:center;
 }
 .submit-1 {
+  width:60%;
   background-color: #2a3a3f;
   font-size:1.2em;
   border: solid 2px #1d9edd;
   border-radius:20px;
-  padding:2px 32px;
+  padding: 8px 0;
   margin-top:8px;
   margin-bottom:50px;
 }
@@ -129,7 +127,7 @@ ul.header-menu {
   margin-bottom:40px;
 }
 .portfolio-item {
-  display:flex;
+  display:none;
   min-height:260px;
   padding:32px 16px;
   background-color: #ddd;
